<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddFood">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIcon="@drawable/homemenu" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/Denim"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewAdminHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arvo_bold"
                android:lineSpacingExtra="8sp"
                android:text="@string/AdminHeader"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.303" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="143dp"
                android:layout_height="147dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtViewAdminHeader"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695"
                app:srcCompat="@drawable/crossfitgym" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="397dp"
        android:layout_height="451dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <EditText
            android:id="@+id/edittxtCarbs"
            android:layout_width="184dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded"
            android:ems="10"
            android:hint="@string/carbs"
            android:inputType="number"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewCarbs"
            app:layout_constraintEnd_toEndOf="@+id/edittxtFat"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edittxtFat"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editMealName"
            android:layout_width="184dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded"
            android:ems="10"
            android:hint="@string/MealName"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtViewMealName"
            app:layout_constraintEnd_toEndOf="@+id/gram"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gram" />

        <EditText
            android:id="@+id/edittxtProtein"
            android:layout_width="184dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded"
            android:ems="10"
            android:hint="@string/Protein"
            android:inputType="number"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewProtien"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.922"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/gram"
            android:layout_width="184dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded"
            android:ems="10"
            android:hint="@string/Gram"
            android:inputType="number"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtViewWeight"
            app:layout_constraintEnd_toEndOf="@+id/editTxtcalories"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTxtcalories" />

        <EditText
            android:id="@+id/edittxtFat"
            android:layout_width="184dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded"
            android:ems="10"
            android:hint="@string/fat"
            android:inputType="number"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewFat"
            app:layout_constraintEnd_toEndOf="@+id/edittxtProtein"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edittxtProtein"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTxtcalories"
            android:layout_width="184dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded"
            android:ems="10"
            android:hint="@string/calories"
            android:inputType="number"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewCal"
            app:layout_constraintEnd_toEndOf="@+id/edittxtCarbs"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edittxtCarbs"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txtViewMealName"
            android:layout_width="92dp"
            android:layout_height="26dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/MealName"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/editMealName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAddFoodHeader" />

        <TextView
            android:id="@+id/txtViewWeight"
            android:layout_width="92dp"
            android:layout_height="26dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/Weight"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/gram"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewMealName" />

        <TextView
            android:id="@+id/textViewCal"
            android:layout_width="92dp"
            android:layout_height="26dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/cal"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/editTxtcalories"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewWeight" />

        <TextView
            android:id="@+id/textViewCarbs"
            android:layout_width="92dp"
            android:layout_height="26dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/carb"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/edittxtCarbs"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCal" />

        <TextView
            android:id="@+id/textViewFat"
            android:layout_width="92dp"
            android:layout_height="26dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/fats"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/edittxtFat"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCarbs" />

        <TextView
            android:id="@+id/textViewProtien"
            android:layout_width="92dp"
            android:layout_height="26dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/Protiens"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/edittxtProtein"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFat" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:onClick="AddFood"
            android:text="@string/Add"
            android:textAllCaps="false"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.283"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:text="@string/Back"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.699"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittxtProtein" />

        <TextView
            android:id="@+id/textViewAddFoodHeader"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@color/purple_500"
            android:gravity="center"
            android:text="@string/AddFoodHeader"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>